added the register page

--- a/register.html
+++ b/register.html
@@ -19,25 +19,37 @@
                 <img src="images/logo.png" class="w-46 md:w-auto" alt="">
                 
             </div>
-            <h1 class="text-xl md:text-3xl lg:text-5xl text-green-600 font-bold mt-5">Welcome Back !!</h1>
+            <h1 class="text-xl md:text-3xl lg:text-5xl text-green-600 font-bold mt-5">Let's make together !!</h1>
             <p class="md:w-5/12 mx-auto md:mx-0 text-gray-500 mt-5">
-                Control and monitorize your Farm from dashboard.
+                Control and monitor your Farm from dashboard.
             </p>
         </div>
 
         <div class="w-full md:w-full lg:w-9/12 md:mx-0 p-4">
             <div class="bg-white p-2 md:p-10 flex flex-col w-full shadow-xl rounded-xl">
                 <h2 class="text-2xl font-bold text-green-600 text-left mb-5">
-                Login
+                Sign Up
                 </h2>
                 <form action="" class="w-full ">
                     <div id="input" class="flex flex-col w-full my-5 text-left">
-                        <label for="username" class="text-gray-500 mb-2">Email</label>
-                        <input type="email" name="email" placeholder="Please enter Your Email" class="appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg"/>
+                        <label for="username" class="text-gray-500 mb-2">First name</label>
+                        <input type="email" name="fname" placeholder="Please enter Your first name" class="appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg"/>
+                    </div>
+                    <div id="input" class="flex flex-col w-full my-5 text-left">
+                        <label for="password" class="text-gray-500 mb-2">Last name</label>
+                        <input type="text" name="lname" placeholder="Please enter your last name" class="appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg"/>
+                    </div>
+                    <div id="input" class="flex flex-col w-full my-5 text-left">
+                        <label for="password" class="text-gray-500 mb-2">Email</label>
+                        <input type="email" name="email" placeholder="Enter your email" class="appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg"/>
                     </div>
                     <div id="input" class="flex flex-col w-full my-5 text-left">
                         <label for="password" class="text-gray-500 mb-2">Password</label>
                         <input type="password" name="password" placeholder="Please enter your password" class="appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg"/>
+                    </div>
+                    <div id="input" class="flex flex-col w-full my-5 text-left">
+                        <label for="password" class="text-gray-500 mb-2">Confirm Password</label>
+                        <input type="password" name="confirmPassword" placeholder="confirm your password" class="appearance-none border-2 border-gray-100 rounded-lg px-4 py-3 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-600 focus:shadow-lg"/>
                     </div>
                     <div id="button" class="flex flex-col w-full my-5">
                         <button
@@ -61,12 +73,11 @@
                                 ></path>
                             </svg>
                             </div>
-                            <div class="font-bold">Login</div>
+                            <div class="font-bold">Register</div>
                         </div>
                         </button>
                         <div class="flex justify-evenly mt-5">
-                        <a href="#" class="w-full text-center font-medium text-red-500">Forgot password</a>
-                        <a href="#" class="w-full text-center font-medium text-blue-500">No Account? Sign up</a>
+                        <a href="#" class="w-full text-center font-medium text-blue-500">Have account, login up</a>
                         </div>
                     </div>
                 </form>
